--- a/wiki20/templates/master.xhtml
+++ b/wiki20/templates/master.xhtml
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta charset="${response.charset}" />
+  <meta charset="${response.charset}"/>
 
   <title py:block="master_title">Your generic title goes here</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/bootstrap.min.css')}" />
-  <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/style.css')}" />
+  <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/bootstrap.min.css')}"/>
+  <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/style.css')}"/>
 
   <py:block name="head"></py:block>
 </head>
@@ -31,9 +31,12 @@
     <div class="collapse navbar-collapse" id="navbar-content">
       <ul class="nav navbar-nav">
         <li class="${('', 'active')[self.defined('page') and page=='index']}"><a href="${tg.url('/')}">Welcome</a></li>
-        <li class="${('', 'active')[self.defined('page') and page=='about']}"><a href="${tg.url('/about')}">About</a></li>
-        <li class="${('', 'active')[self.defined('page') and page=='data']}"><a href="${tg.url('/data')}">Serving Data</a></li>
-        <li class="${('', 'active')[self.defined('page') and page=='environ']}"><a href="${tg.url('/environ')}">WSGI Environment</a></li>
+        <li class="${('', 'active')[self.defined('page') and page=='about']}"><a href="${tg.url('/about')}">About</a>
+        </li>
+        <li class="${('', 'active')[self.defined('page') and page=='data']}"><a href="${tg.url('/data')}">Serving
+          Data</a></li>
+        <li class="${('', 'active')[self.defined('page') and page=='environ']}"><a href="${tg.url('/environ')}">WSGI
+          Environment</a></li>
       </ul>
       <ul py:if="tg.auth_stack_enabled" class="nav navbar-nav navbar-right">
         <li py:if="not request.identity"><a href="${tg.url('/login')}">Login</a></li>
@@ -49,7 +52,7 @@
     <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <div py:if="flash" py:replace="Markup(flash)" />
+          <div py:if="flash" py:replace="Markup(flash)"/>
         </div>
       </div>
     </py:with>
@@ -60,7 +63,9 @@
 
   <!-- Footer -->
   <footer class="footer hidden-xs hidden-sm">
-    <a class="pull-right" href="http://www.turbogears.org"><img style="vertical-align:middle;" src="${tg.url('/img/under_the_hood_blue.png')}" alt="TurboGears 2" /></a>
+    <a class="pull-right" href="http://www.turbogears.org"><img style="vertical-align:middle;"
+                                                                src="${tg.url('/img/under_the_hood_blue.png')}"
+                                                                alt="TurboGears 2"/></a>
     <p>Copyright &copy; ${getattr(tmpl_context, 'project_name', 'TurboGears2')} ${h.current_year()}</p>
   </footer>
 
