--- a/wiki20/templates/page.xhtml
+++ b/wiki20/templates/page.xhtml
@@ -10,7 +10,8 @@
       <br/>
       You can return to the <a href="/">FrontPage</a>.
     </div>
-    
+
+    <h1>${wikipage.pagename}</h1>
     <div py:replace="Markup(content)">Formatted content goes here</div>
     
     <div>
